--- a/pages/index.css
+++ b/pages/index.css
@@ -10,7 +10,7 @@ up to 425px (mobile devices).
 @import url(../blocks/header/header.css);
 @import url(../blocks/nav/nav.css);
 @import url(../blocks/link/link.css);
-@import url(../blocks/lead/lead.css);
+@import url(../blocks/lead/lead.css);/*organized*/
 @import url(../blocks/intro/intro.css);
 @import url(../blocks/photo/photo.css);
 @import url(../blocks/grid/grid.css);
