--- a/blocks/comments/__comment_quote/comments__comment_quote.css
+++ b/blocks/comments/__comment_quote/comments__comment_quote.css
@@ -1,60 +1,62 @@
-.intro__text {
-	width: 683px;
+.comments__comment_quote {
+	position: absolute;
+	display: flex;
+	justify-content: space-between;
+	margin: 0;
+	width: 382px;
+	height: 59px;
+	top: 139px;
 	font-size: 14px;
 	line-height: 24px;
 	color: #FFFFFF;
-	margin: 0;
-	margin-top: 33px;
 }
-
 /*Use these checkpoints: 320, 375, 768, 1024, 1280*/
-
 /*large screen*/
 @media screen and (max-width: 1280px) {
-	.intro__text {
-		width: 683px;
+	.comments__comment_quote {
+		width: 382px;
+		top: 139px;
 		font-size: 14px;
 		line-height: 24px;
-		margin-top: 33px;
-	}
-}
-
-/*big screen*/
-@media screen and (max-width: 1024px) {
-	.intro__text {
-		width: 683px;
-		font-size: 14px;
-		line-height: 24px;
-		margin-top: 38px;
 	}
 }	
 
-/*medium screen*/
-@media screen and (max-width: 768px) {
-	.intro__text {
-		width: 720px;
+/*big screen*/
+@media screen and (max-width: 1024px) {
+	.comments__comment_quote {
+		width: 296px;
+		top: 125px;
 		font-size: 14px;
 		line-height: 24px;
-		margin-top: 37px;
+	}	 
+}
+
+/*medium screen*/
+@media screen and (max-width: 768px) {
+	.comments__comment_quote {
+		width: 382px;
+		top: 153px;
+		font-size: 16px;
+	line-height: 23px;
 	}	
 }
 
 /*small screen*/
 @media screen and (max-width: 375px) {
-	.intro__text {
-		width: 343px;
+	.comments__comment_quote {
+		width: 342px;
+		top: 153px;
 		font-size: 16px;
-		line-height: 27px;
-		margin-top: 35px;
+	line-height: 23px;
 	}
 }	
 
 /*smaller screen*/
 @media screen and (max-width: 320px) {
-	.intro__text {
+	.comments__comment_quote {
 		width: 288px;
+		top: 177px;
 		font-size: 16px;
-		line-height: 169.4%;
-		margin-top: 35px;
+		line-height: 23px;
 	}
 }
