--- a/blocks/comments/__item/comments__item.css
+++ b/blocks/comments/__item/comments__item.css
@@ -1,49 +1,41 @@
-/*places styles*/
-.places {
+.comments__item {
 	display: flex;
-	flex-direction: column;
-	flex-wrap: wrap;
-	width: 986px;
-	margin: auto;
+	position: relative;
+	margin-right: 300px;
 }
 
 /*Use these checkpoints: 320, 375, 768, 1024, 1280*/
-
 /*large screen*/
 @media screen and (max-width: 1280px) {
-	.places {
-		width: 986px;
+	.comments__item {
+		margin-right: 300px
 	}
 }	
 
 /*big screen*/
 @media screen and (max-width: 1024px) {
-	.places {
-		width: 928px;
-		padding-top: 102px;
-	}
-}	
+	.comments__item {
+		margin-right: 214px
+	}	 
+}
 
 /*medium screen*/
 @media screen and (max-width: 768px) {
-	.places {
-		width: 720px;
-		padding-top: 102px;
+	.comments__item {
+		margin-right: auto;
 	}	
 }
 
 /*small screen*/
 @media screen and (max-width: 375px) {
-	.places {
-		width: 375px;
-		padding-top: 64px;
+	.comments__item {
+		margin-right: auto;
 	}
 }	
 
 /*smaller screen*/
 @media screen and (max-width: 320px) {
-	.places {
-		width: 320px;
-		padding-top: 64px;
+	.comments__item {
+		margin: auto;
 	}
-}	
+}
