--- a/blocks/comments/comments.css
+++ b/blocks/comments/comments.css
@@ -1,9 +1,9 @@
 /*comments styles*/
 @import url(./__container/comments__container.css);
-@import url(./__container/__comment__author/comments__container__comment__author.css);
-@import url(./__container/__comment__quote/comments__container__comment__quote.css);
-@import url(./__container/__image/comments__container__image.css);
-@import url(./__container/__item/comments__container__item.css);
+@import url(./__comment_author/comments__comment_author.css);
+@import url(./__comment_quote/comments__comment_quote.css);
+@import url(./__image/comments__image.css);
+@import url(./__item/comments__item.css);
 @import url(./__content/comments__content-title.css);
 @import url(./__content/comments__content-subtitle.css);
 .comments {
@@ -36,6 +36,7 @@
 @media screen and (max-width: 768px) {
 	.comments {
 		width: 660px;
+		display: block;
 	}	
 }
 
@@ -43,7 +44,7 @@
 @media screen and (max-width: 375px) {
 	.comments {
 		width: 343px;
-		flex-direction: column;
+		display: block;
 	}
 }	
 
@@ -51,6 +52,6 @@
 @media screen and (max-width: 320px) {
 	.comments {
 		width: 288px;
-		flex-direction: column;
+		display: block;
 	}
 }
