--- a/blocks/lead/__title/lead__title.css
+++ b/blocks/lead/__title/lead__title.css
@@ -10,6 +10,7 @@
 }
 
 /*Use these checkpoints: 320, 375, 768, 1024, 1280*/
+
 /*large screen*/
 @media screen and (max-width: 1280px) {
 	.lead__title {
@@ -17,7 +18,7 @@
 		font-size: 96px;
 		line-height: 93px;
 	}
-}	
+}
 
 /*big screen*/
 @media screen and (max-width: 1024px) {
@@ -37,10 +38,19 @@
 	}	
 }
 
+/*small screen*/
+@media screen and (max-width: 375px) {
+	.lead__title {
+		width: 343px;
+		font-size: 40px;
+		line-height: 44px;
+	}
+}	
+
 /*smaller screen*/
 @media screen and (max-width: 320px) {
 	.lead__title {
 		font-size: 40px;
 		line-height: 44px;
 	}
-}	
+}
