--- a/blocks/place/__image/place__image.css
+++ b/blocks/place/__image/place__image.css
@@ -1,49 +1,51 @@
-/*places styles*/
-.places {
-	display: flex;
-	flex-direction: column;
-	flex-wrap: wrap;
-	width: 986px;
-	margin: auto;
+.place__image {
+	padding-top: 60px;
+	width: 460px;
+	height: 460px;
 }
 
 /*Use these checkpoints: 320, 375, 768, 1024, 1280*/
-
 /*large screen*/
 @media screen and (max-width: 1280px) {
-	.places {
-		width: 986px;
+	.place__image {
+		padding-top: 60px;
+		width: 460px;
+		height: 460px;
 	}
 }	
 
 /*big screen*/
 @media screen and (max-width: 1024px) {
-	.places {
-		width: 928px;
-		padding-top: 102px;
+	.place__image {
+		padding-top: 60px;
+		width: 440px;
+		height: 440px;
 	}
 }	
 
 /*medium screen*/
 @media screen and (max-width: 768px) {
-	.places {
-		width: 720px;
-		padding-top: 102px;
+	.place__image {
+		padding-top: 60px;
+		width: 340px;
+		height: 340px;
 	}	
 }
 
 /*small screen*/
 @media screen and (max-width: 375px) {
-	.places {
+	.place__image {
+		padding-top: 60px;
 		width: 375px;
-		padding-top: 64px;
+		height: 375px;
 	}
 }	
 
 /*smaller screen*/
 @media screen and (max-width: 320px) {
-	.places {
+	.place__image {
+		padding-top: 60px;
 		width: 320px;
-		padding-top: 64px;
+		height: 320px;
 	}
 }	
