--- a/blocks/place/__left-column/place_left-column.css
+++ b/blocks/place/__left-column/place_left-column.css
@@ -1,49 +1,43 @@
-.grid__item {
-	width: 284px;
-	height: 188px;
-	list-style-type: none;
-	overflow: hidden;
-	background-position: center;
+.place_left-column{
+  width: 460px;
 }
 
 /*Use these checkpoints: 320, 375, 768, 1024, 1280*/
-
 /*large screen*/
 @media screen and (max-width: 1280px) {
-	.grid__item {
-		width: 284px;
-		height: 188px;
+	.place_left-column {
+		width: 460px;
 	}
 }	
 
 /*big screen*/
 @media screen and (max-width: 1024px) {
-	.grid__item {
-		width: 300px;
-		height: 200px;
+	.place_left-column {
+		width: 440px;
+		
 	}
 }	
 
 /*medium screen*/
 @media screen and (max-width: 768px) {
-	.grid__item {
-		width: 352px;
-		height: 234px;
+	.place_left-column {
+		width: 340px;
+		
 	}	
 }
 
 /*small screen*/
 @media screen and (max-width: 375px) {
-	.grid__item {
-		width: 343px;
-		height: 232px;
+	.place_left-column {
+		width: 375px;
+	
 	}
 }	
 
 /*smaller screen*/
 @media screen and (max-width: 320px) {
-	.grid__item {
-		width: 288px;
-		height: 192px;
+	.place_left-column {
+		width: 320px;
+		
 	}
 }	
