--- a/blocks/place/__right-column/place__right-column.css
+++ b/blocks/place/__right-column/place__right-column.css
@@ -1,49 +1,41 @@
-.grid__item {
-	width: 284px;
-	height: 188px;
-	list-style-type: none;
-	overflow: hidden;
-	background-position: center;
+.place__right-column {
+	width: 484px;
 }
 
 /*Use these checkpoints: 320, 375, 768, 1024, 1280*/
-
 /*large screen*/
 @media screen and (max-width: 1280px) {
-	.grid__item {
-		width: 284px;
-		height: 188px;
+	.place__right-column {
+		width: 484px;
 	}
 }	
 
 /*big screen*/
 @media screen and (max-width: 1024px) {
-	.grid__item {
-		width: 300px;
-		height: 200px;
+	.place__right-column {
+		width: 456px;
 	}
 }	
 
 /*medium screen*/
 @media screen and (max-width: 768px) {
-	.grid__item {
+	.place__right-column {
 		width: 352px;
-		height: 234px;
 	}	
 }
 
 /*small screen*/
 @media screen and (max-width: 375px) {
-	.grid__item {
+	.place__right-column {
 		width: 343px;
-		height: 232px;
+		padding: 24px 16px 0px;
 	}
 }	
 
 /*smaller screen*/
 @media screen and (max-width: 320px) {
-	.grid__item {
+	.place__right-column {
 		width: 288px;
-		height: 192px;
+		padding: 24px 16px 0px;
 	}
 }	
