--- a/blocks/place/__title/place__title.css
+++ b/blocks/place/__title/place__title.css
@@ -1,50 +1,56 @@
-.intro__title {
-	font-family: "Inter-Black", sans-serif;
-	font-size: 54px;
-	line-height: 59px;
-	width: 683px;
-	height: 113px;
-	color: #FFFFFF;
+.place__title {
 	margin: 0;
+	font-family: "Inter-Black", sans-serif;
+	width: 457px;
+	font-size: 72px;
+	line-height: 65px;
+	color: #FFFFFF;
 }
 
 /*Use these checkpoints: 320, 375, 768, 1024, 1280*/
-
 /*large screen*/
 @media screen and (max-width: 1280px) {
-	.intro__title {
-		width: 683px;
+	.place__title {
+		width: 457px;
+		font-size: 72px;
+		line-height: 65px;
 	}
 }	
 
 /*big screen*/
 @media screen and (max-width: 1024px) {
-	.intro__title {
-		width: 928px;
+	.place__title {
+		width: 440px;
+		font-size: 72px;
+		line-height: 65px;
 	}
 }	
 
 /*medium screen*/
 @media screen and (max-width: 768px) {
-	.intro__title {
-		width: 720px;
+	.place__title {
+		width: 340px;
+		font-size: 42px;
+		line-height: 46px;
 	}	
 }
 
 /*small screen*/
 @media screen and (max-width: 375px) {
-	.intro__title {
+	.place__title {
 		width: 343px;
 		font-size: 32px;
-		line-height: 35px
+		line-height: 35px;
+		padding: 0px 16px 0px;
 	}
 }	
 
 /*smaller screen*/
 @media screen and (max-width: 320px) {
-	.intro__title {
+	.place__title {
 		width: 288px;
 		font-size: 32px;
-		line-height: 35px
+		line-height: 35px;
+		padding: 0px 16px 0px;
 	}
-}
+}	
