--- a/blocks/video/__item/_duration/video__item_duration.css
+++ b/blocks/video/__item/_duration/video__item_duration.css
@@ -1,49 +1,51 @@
-.video__container {
-	width: 1184px;
+.video__item_duration {
+	position: absolute;
 	display: flex;
-	flex-wrap: wrap;  
 	justify-content: space-between;
-	padding-top: 72px;
-	position: relative;
-	margin: auto;
+	margin: 0;
+	width: 55px;
+	height: 12px;
+	top: 165px;
+	left: 30px;
+	font-weight: 500;
+	font-size: 12px;
+	line-height: 13px;
+	letter-spacing: 0.3em;
+	color: #FFFFFF;
 }
 
 /*Use these checkpoints: 320, 375, 768, 1024, 1280*/
 /*large screen*/
 @media screen and (max-width: 1280px) {
-	.video__container {
-		width: 986px;
+	.video__item_duration {
+		width: 55px;
 	}
 }	
 
 /*big screen*/
 @media screen and (max-width: 1024px) {
-	.video__container {
-		width: 928px;
+	.video__item_duration {
+		width: 55px;
 	}
 }	
 
 /*medium screen*/
 @media screen and (max-width: 768px) {
-	.video__container {
-		width: 720px;
+	.video__item_duration {
+		width: 55px;
 	}	
 }
 
 /*small screen*/
 @media screen and (max-width: 375px) {
-	.video__container {
-		width: 375px;
-		display: block;
-		/*justify-content: center;*/
+	.video__item_duration {
+		width: 84px;
 	}
 }	
 
 /*smaller screen*/
 @media screen and (max-width: 320px) {
-	.video__container {
-		width: 320px;
-		display: block;
-		/*justify-content: center;*/
+	.video__item_duration {
+		width: 80px;;
 	}
 }	
