--- a/blocks/video/video.css
+++ b/blocks/video/video.css
@@ -2,6 +2,7 @@
 @import url(./__container/video__container.css);
 @import url(./__content/video__content-title.css);
 @import url(./__content/video__content-subtitle.css);
+@import url(./__item/video__item.css);
 .video {
 	width: 1184px;
 	height: 570px;
@@ -12,6 +13,7 @@
 }
 
 /*Use these checkpoints: 320, 375, 768, 1024, 1280*/
+
 /*large screen*/
 @media screen and (max-width: 1280px) {
 	.video {
