--- a/pages/index.css
+++ b/pages/index.css
@@ -9,11 +9,11 @@ up to 425px (mobile devices).
 @import url(../blocks/page/page.css);
 @import url(../blocks/header/header.css);
 @import url(../blocks/nav/nav.css);
-@import url(../blocks/link/link.css);
-@import url(../blocks/lead/lead.css);/*organized*/
+@import url(../blocks/lead/lead.css);
 @import url(../blocks/intro/intro.css);
 @import url(../blocks/photo/photo.css);
 @import url(../blocks/grid/grid.css);
+@import url(../blocks/place/place.css);
 @import url(../blocks/places/places.css);
 @import url(../blocks/video/video.css);
 @import url(../blocks/comments/comments.css);
