--- a/blocks/video/__item/_icon-play/video__item_icon-play.css
+++ b/blocks/video/__item/_icon-play/video__item_icon-play.css
@@ -2,8 +2,8 @@
 	position: absolute;
 	display: flex;
 	justify-content: space-between;
-	top: 30px;
+	/*top: 30px;
 	left: 30px;
 	width: 41px;
-	height: 41px;
+	height: 41px;*/
 }
