--- a/blocks/comments/__container/comments__container.css
+++ b/blocks/comments/__container/comments__container.css
@@ -1,10 +1,24 @@
 .comments__container {
-	display: flex;
-	flex-wrap: wrap;
-	width: 1184px;
-	margin: 0;
-	padding: 0;  
-	justify-content: space-between;
-	padding-top: 72px;
-	position: relative;
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: repeat(3, auto);
+  grid-gap: 20px;
+  list-style: none;
+  margin: 0;
+	padding: 0;
+	padding-top: 71px;
+}
+/*medium screen*/
+@media (min-width: 768px) {
+  .comments__container {
+      grid-gap: 45px;
+  }
+}
+/*big screen*/
+@media (min-width: 1024px) {
+  .comments__container {
+      grid-template-columns: repeat(3, 1fr);
+      grid-template-rows: 1fr;
+      grid-gap: 19px;
+  }
 }
