--- a/blocks/comments/__image/comments__image.css
+++ b/blocks/comments/__image/comments__image.css
@@ -1,8 +1,13 @@
 .comments__image {
-	position: absolute;
-	display: flex;
-	justify-content: space-between;
 	width: 100px;
 	height: 100px;
 	border-radius: 50%;
+	margin: 0;
+}
+
+/*medium screen*/
+@media screen and (max-width: 768px) {
+	.comments__image {
+		margin-left: auto;	
+	}	
 }
