--- a/blocks/comments/__item/comments__item.css
+++ b/blocks/comments/__item/comments__item.css
@@ -1,41 +1,25 @@
 .comments__item {
-	display: flex;
-	position: relative;
-	margin-right: 300px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: 0 auto 47px auto;
+  padding: 0;
+  max-width: 382px;
 }
 
-/*Use these checkpoints: 320, 375, 768, 1024, 1280*/
-/*large screen*/
-@media screen and (max-width: 1280px) {
-	.comments__item {
-		margin-right: 300px
-	}
-}	
-
+.comments__item:last-child {
+  margin: 0 auto;
+}
 /*big screen*/
-@media screen and (max-width: 1024px) {
-	.comments__item {
-		margin-right: 214px
-	}	 
+@media (min-width: 1024px) {
+  .comments__item {
+      align-items: flex-start;
+      margin: 0;
+  }
 }
-
 /*medium screen*/
-@media screen and (max-width: 768px) {
-	.comments__item {
-		margin-right: auto;
-	}	
-}
-
-/*small screen*/
-@media screen and (max-width: 375px) {
-	.comments__item {
-		margin-right: auto;
-	}
-}	
-
-/*smaller screen*/
-@media screen and (max-width: 320px) {
-	.comments__item {
-		margin: auto;
-	}
+@media (min-width: 768px) {
+  .comments__item {
+      width: 320px;
+  }
 }
