--- a/blocks/comments/comments.css
+++ b/blocks/comments/comments.css
@@ -1,20 +1,18 @@
 /*comments styles*/
 @import url(./__container/comments__container.css);
-@import url(./__comment_author/comments__comment_author.css);
-@import url(./__comment_quote/comments__comment_quote.css);
+@import url(./__author/comments__author.css);
+@import url(./__quote/comments__quote.css);
 @import url(./__image/comments__image.css);
 @import url(./__item/comments__item.css);
-@import url(./__content/comments__content-title.css);
-@import url(./__content/comments__content-subtitle.css);
+@import url(./__title/comments__title.css);
+@import url(./__subtitle/comments__subtitle.css);
+
 .comments {
-	width: 1184px;
-	height: 570px;
-	padding-top: 102px;
-	padding-bottom: 103px;
+  padding: 76px 16px 64px 16px;
+  max-width: 1184px;
+	margin: 0 auto;
 	display: flex;
 	flex-direction: column;
-	flex-wrap: wrap;
-	margin: auto;
 }
 
 /*Use these checkpoints: 320, 375, 768, 1024, 1280*/
@@ -22,30 +20,13 @@
 /*big screen*/
 @media screen and (max-width: 1024px) {
 	.comments {
-		width: 925px;
-	}	 
+		padding: 102px 48px 84px 48px;
+	}
 }
 
 /*medium screen*/
 @media screen and (max-width: 768px) {
 	.comments {
-		width: 660px;
-		display: block;
-	}	
-}
-
-/*small screen*/
-@media screen and (max-width: 375px) {
-	.comments {
-		width: 343px;
-		display: block;
-	}
-}	
-
-/*smaller screen*/
-@media screen and (max-width: 320px) {
-	.comments {
-		width: 288px;
-		display: block;
+		padding: 116px 64px 100px 64px;
 	}
 }
