--- a/blocks/footer/__copyright/footer__copyright.css
+++ b/blocks/footer/__copyright/footer__copyright.css
@@ -1,60 +1,18 @@
+
 .footer__copyright {
-  font-size: 14px;
-  width: 282px;
-  height: 13px;
-  margin: 0;
-  margin-left: 900px;
-  align-self: flex-end;
-  line-height: 20px;
-  text-align: right;
+  font-style: normal;
+  font-weight: normal;
   color: #FFFFFF;
+  font-size: 14px;
+  line-height: 20px;
+  text-align: left;
+  margin: 48px 0 0 0;
+  padding: 0;
 }
 
-/*Use these checkpoints: 320, 375, 768, 1024, 1280*/
-/*large screen*/
-@media screen and (max-width: 1280px) {
-	.footer__copyright {
-    width:282px;
-    font-size: 14px;
-    line-height: 20px;
-	}
-}	
-
-/*big screen*/
-@media screen and (max-width: 1024px) {
-	.footer__copyright {
-    width:282px;
-    margin-left: 231px;
-    font-size: 14px;
-    line-height: 20px;
-	}	 
-}
-
-/*medium screen*/
-@media screen and (max-width: 768px) {
-	.footer__copyright {
-    width:167px;
-    font-size: 14px;
-    line-height: 20px;
-	}	
-}
-
-/*small screen*/
-@media screen and (max-width: 375px) {
-	.footer__copyright {
-    width: 282px;
-		height: 202px;
-    padding-top: 64px;
-    margin-left: 0;
-	}
-}	
-
-/*smaller screen*/
-@media screen and (max-width: 320px) {
-	.footer__copyright {
-    width: 167px;
-		height: 202px;
-    padding-top: 64px;
-    margin-left: 0;
-	}
+@media (min-width: 768px) {
+  .footer__copyright {
+      margin: 0;
+      
+  }
 }
