--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -4,7 +4,7 @@
 	max-width: 1440px;
 	margin: 0 auto;
 	background: #2A2C2F;
-	font-family: "Inter", sans-serif;
+	font-family: "Inter", "Arial", sans-serif;
 	font-style: normal;
 	font-weight: normal;
 }
