--- a/blocks/place/__image/place__image.css
+++ b/blocks/place/__image/place__image.css
@@ -1,5 +1,5 @@
 .place__image {
-	padding-top: 60px;
+	margin-top: 43px;
 	width: 460px;
 	height: 460px;
 }
@@ -8,7 +8,6 @@
 /*large screen*/
 @media screen and (max-width: 1280px) {
 	.place__image {
-		padding-top: 60px;
 		width: 460px;
 		height: 460px;
 	}
@@ -17,7 +16,6 @@
 /*big screen*/
 @media screen and (max-width: 1024px) {
 	.place__image {
-		padding-top: 60px;
 		width: 440px;
 		height: 440px;
 	}
@@ -26,7 +24,6 @@
 /*medium screen*/
 @media screen and (max-width: 768px) {
 	.place__image {
-		padding-top: 60px;
 		width: 340px;
 		height: 340px;
 	}	
@@ -35,7 +32,6 @@
 /*small screen*/
 @media screen and (max-width: 375px) {
 	.place__image {
-		padding-top: 60px;
 		width: 375px;
 		height: 375px;
 	}
@@ -44,7 +40,6 @@
 /*smaller screen*/
 @media screen and (max-width: 320px) {
 	.place__image {
-		padding-top: 60px;
 		width: 320px;
 		height: 320px;
 	}
