--- a/blocks/place/__paragraph/place__paragraph.css
+++ b/blocks/place/__paragraph/place__paragraph.css
@@ -1,22 +1,23 @@
 .place__paragraph {
-	margin-top: 30px;
 	font-size: 18px;
 	line-height: 30px;
-	color: #FFFFFF
+	color: #FFFFFF;
+  width: 484px;
+  margin-top: 0;
+  margin-left: 16px;
+  margin-bottom: 37px;
 }
 
-.place__paragraph:first-of-type {
-	margin-top: 60px;
+.place__paragraph:last-of-type {
+  margin-bottom: 0px;
 }
 
-/*smaller screen*/
-@media screen and (max-width: 425px) {
-	.place__paragraph {
-		margin-top: 26px;
-	}	
 
-	.place__paragraph:first-of-type {
-		margin-top: 24px;
-	}
-
+@media (min-width: 768px) {
+  .place__paragraph {
+    font-size: 18px;
+    line-height: 30px;
+    margin-left: 28px;
+   
+  }
 }
