--- a/blocks/place/place.css
+++ b/blocks/place/place.css
@@ -1,16 +1,17 @@
 /*place styles*/
-@import url(./__title/place__title.css);
+/*@import url(./__title/place__title.css);*/
 @import url(./__image/place__image.css);
-@import url(./__left-column/place_left-column.css);
-@import url(./__right-column/place__right-column.css);
-@import url(./__website/place__website-url.css);
+@import url(./__title/place__title.css);
+@import url(./__website/place__website.css);
+@import url(./__website-url/place__website-url.css);
+@import url(./__url-heading/place__url-heading.css);
+@import url(./__paragraphs/place__paragraphs.css);
 @import url(./__paragraph/place__paragraph.css);
 
 .place {
-	padding-top: 72px;
 	display: flex;
 	flex-wrap: wrap;
-	justify-content: space-between;
+	
 }
 
 /*Use these checkpoints: 320, 375, 768, 1024, 1280*/
