--- a/blocks/cover/__subtitle/cover__subtitle.css
+++ b/blocks/cover/__subtitle/cover__subtitle.css
@@ -1,18 +1,20 @@
-
 .cover__subtitle {
-  font-size: 18px;
-  line-height: 26px;
-  color: #FFFDFD;
-  text-align: center;
-  position: absolute;
-  width: 382px;
-  top: 477px;
+  margin: 0;
+    width: 382px;
+    align-self: center;
+    line-height: 23px;
+    font-size: 18px;
+    line-height: 26px;
+    text-align: center;
+    color: #FFFFFF;
 }
 
-@media (min-width: 768px) {
+/*Use these checkpoints: 320, 375, 768, 1024, 1280*/
+/*small screen*/
+@media (max-width: 375px) {
   .cover__subtitle {
-      padding: 0 24px;
-      max-width: 438px;
-      margin: 0 0 40px 0;
+    font-size: 14px;
+    line-height: 17px;
+    width: 290px;
   }
 }
