--- a/blocks/intro/__subtitle/intro__subtitle.css
+++ b/blocks/intro/__subtitle/intro__subtitle.css
@@ -15,6 +15,7 @@
 	.intro__subtitle {
 		width: 683px;
     padding-top: 45px;
+    padding-left: 148px;
     font-size: 24px;
 		line-height: 167.44%;
 	}
@@ -25,6 +26,7 @@
 	.intro__subtitle {
 		width: 683px;
     padding-top: 38px;
+    padding-left: 48px;
     font-size: 24px;
 		line-height: 167.44%;
 	}
@@ -35,6 +37,7 @@
 	.intro__subtitle {
 		width: 720px;
     padding-top: 46px;
+    padding-left: 24px;
     font-size: 24px;
 		line-height: 167.44%;
 	}	
@@ -45,6 +48,7 @@
 	.intro__subtitle {
 		width: 343px;
     padding-top: 34px;
+    padding-left: 16px;
 		font-size: 24px;
 		line-height: 167.44%;
 	}
