--- a/blocks/lead/__image/lead__image.css
+++ b/blocks/lead/__image/lead__image.css
@@ -1,9 +1,7 @@
 .lead__image {
-	width: 984px;
-	height: 565px;
-	left: 227px;
+	width:100%;
+	height: auto;
 	padding-top: 67px;
-	margin: auto;
 }
 
 /*Use these checkpoints: 320, 375, 768, 1024, 1280*/
@@ -11,39 +9,35 @@
 /*large screen*/
 @media screen and (max-width: 1280px) {
 	.lead__image {
-		width: 984px;
-		height: 565px;
+		width:100%;
+		
 	}
-}
+}	
 
 /*big screen*/
 @media screen and (max-width: 1024px) {
 	.lead__image {
-		width: 964px;
-		height: 554px;
+		width:100%;
 	}
-}	
+}
 
 /*medium screen*/
 @media screen and (max-width: 768px) {
 	.lead__image {
-		width: 768px;
-		height: 441px;
+		width:100%;
 	}	
 }
 
 /*small screen*/
 @media screen and (max-width: 375px) {
 	.lead__image {
-		width: 375px;
-		height: 211px;
+    width:100%;
 	}
 }	
 
 /*smaller screen*/
 @media screen and (max-width: 320px) {
 	.lead__image {
-		width: 320px;
-		height: 211px;
+    width:100%;
 	}
-}	
+}
