--- a/blocks/comments/comments.css
+++ b/blocks/comments/comments.css
@@ -8,25 +8,34 @@
 @import url(./__subtitle/comments__subtitle.css);
 
 .comments {
-  padding: 76px 16px 64px 16px;
-  max-width: 1184px;
-	margin: 0 auto;
-	display: flex;
-	flex-direction: column;
+  padding: 102px 0;
+  width: 1184px;
+  margin: 0 auto;
+  display: flex;
+  flex-direction: column;
 }
 
 /*Use these checkpoints: 320, 375, 768, 1024, 1280*/
-
 /*big screen*/
 @media screen and (max-width: 1024px) {
 	.comments {
-		padding: 102px 48px 84px 48px;
+    padding: 82px 50px;
+		width: 925px;
 	}
 }
 
 /*medium screen*/
 @media screen and (max-width: 768px) {
 	.comments {
-		padding: 116px 64px 100px 64px;
+    width: 660px;
+		padding: 116px 54px 100px;
+	}
+}
+
+/*small screen*/
+@media screen and (max-width: 375px) {
+	.comments {
+    width: 288px;
+    padding: 76px 16px 64px;
 	}
 }
