--- a/blocks/footer/__copyright/footer__copyright.css
+++ b/blocks/footer/__copyright/footer__copyright.css
@@ -1,4 +1,3 @@
-
 .footer__copyright {
   font-style: normal;
   font-weight: normal;
@@ -10,6 +9,8 @@
   padding: 0;
 }
 
+/*Use these checkpoints: 320, 375, 768, 1024, 1280*/
+/*medium screen*/
 @media (min-width: 768px) {
   .footer__copyright {
       margin: 0;
