--- a/blocks/footer/__item/footer__item.css
+++ b/blocks/footer/__item/footer__item.css
@@ -6,7 +6,8 @@
 .footer__item:last-child {
   margin: 0;
 }
-
+/*Use these checkpoints: 320, 375, 768, 1024, 1280*/
+/*medium screen*/
 @media (min-width: 768px) {
   .footer__item {
       display: inline-block;
