--- a/blocks/footer/__link/footer__link.css
+++ b/blocks/footer/__link/footer__link.css
@@ -12,16 +12,19 @@
   transition: .5s ease;	
 }
 
-@media (min-width: 768px) {
-  .footer__link {
-      font-size: 16px;
-      line-height: 27px;
-  }
-}
-
+/*Use these checkpoints: 320, 375, 768, 1024, 1280*/
+/*big screen*/
 @media (min-width: 1024px) {
   .footer__link {
       font-size: 24px;
       line-height: 41px;
+  }
+}
+
+/*medium screen*/
+@media (min-width: 768px) {
+  .footer__link {
+      font-size: 16px;
+      line-height: 27px;
   }
 }
