--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -13,16 +13,18 @@
   max-width: 1184px;
 }
 
+/*Use these checkpoints: 320, 375, 768, 1024, 1280*/
+/*big screen*/
+@media (min-width: 1024px) {
+  .footer {
+      padding: 160px 48px 48px 48px;
+  }
+}
+/*medium screen*/
 @media (min-width: 768px) {
   .footer {
       padding: 102px 24px 24px 24px;
       flex-direction: row;
       align-items: center;
-  }
-}
-
-@media (min-width: 1024px) {
-  .footer {
-      padding: 160px 48px 48px 48px;
   }
 }
