--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -4,7 +4,7 @@
 	display: flex;
 	justify-content: space-between;
 	align-items: center;
-	min-height: 46px;
+  width: 1184px;
 }
 
 /*Use these checkpoints: 320, 375, 768, 1024, 1280*/
@@ -13,7 +13,7 @@
 @media screen and (max-width: 1280px) {
 	.header {
 		padding: 37px 48px 47px;
-		min-height: 46px;
+	   
 	}
 }
 
@@ -21,7 +21,7 @@
 @media screen and (max-width: 1024px) {
 	.header {
 		padding: 36px 48px 47px;
-		min-height: 46px;
+	  width: 928px;
 	}
 }	
 
@@ -29,7 +29,7 @@
 @media screen and (max-width: 768px) {
 	.header {
 		padding: 36px 24px 48px;
-		min-height: 46px;
+	  width: 720px;
 	}	
 }
 
@@ -37,7 +37,7 @@
 @media screen and (max-width: 375px) {
 	.header {
 		padding: 18px 16px 50px;
-		min-height: 36px;
+		width: 343px;
 	}
 }	
 
@@ -45,6 +45,6 @@
 @media screen and (max-width: 320px) {
 	.header {
 		padding: 21px 16px 49px;
-		min-height: 36px;
+		width: 288px;
 	}
 }	
