--- a/blocks/intro/__text/intro__text.css
+++ b/blocks/intro/__text/intro__text.css
@@ -12,7 +12,8 @@
 /*large screen*/
 @media screen and (max-width: 1280px) {
 	.intro__text {
-		width: 683px;
+    width: 683px;
+    padding-left: 148px;
 		font-size: 14px;
 		line-height: 24px;
 		margin-top: 33px;
@@ -22,7 +23,8 @@
 /*big screen*/
 @media screen and (max-width: 1024px) {
 	.intro__text {
-		width: 683px;
+    width: 683px;
+    padding-left: 48px;
 		font-size: 14px;
 		line-height: 24px;
 		margin-top: 38px;
@@ -32,7 +34,8 @@
 /*medium screen*/
 @media screen and (max-width: 768px) {
 	.intro__text {
-		width: 720px;
+    width: 720px;
+    padding-left: 24px;
 		font-size: 14px;
 		line-height: 24px;
 		margin-top: 37px;
@@ -42,10 +45,11 @@
 /*small screen*/
 @media screen and (max-width: 375px) {
 	.intro__text {
-		width: 343px;
+    width: 343px;
+    padding-left: 16px;
 		font-size: 16px;
 		line-height: 27px;
-		margin-top: 35px;
+		padding-top: 35px;
 	}
 }	
 
