--- a/blocks/lead/__subtitle/lead__subtitle.css
+++ b/blocks/lead/__subtitle/lead__subtitle.css
@@ -2,8 +2,6 @@
 	font-size: 30px;
 	line-height: 36px;
 	width: 583px;
-	height: 65px;
-	left: 429px;
 	padding-top: 48px;
 	text-align: center;
 	align-items: center;
@@ -16,7 +14,7 @@
 /*large screen*/
 @media screen and (max-width: 1280px) {
 	.lead__subtitle {
-		width: 583px;
+		width: 600px;
 		font-size: 30px;
 		line-height: 36px;
 	}
@@ -25,7 +23,7 @@
 /*big screen*/
 @media screen and (max-width: 1024px) {
 	.lead__subtitle {
-		width: 928px;
+		width: 630px;
 		font-size: 30px;
 		line-height: 36px;
 	}
@@ -34,7 +32,7 @@
 /*medium screen*/
 @media screen and (max-width: 768px) {
 	.lead__subtitle {
-		width: 720px;
+		width: 80%;
 		font-size: 30px;
 		line-height: 36px;
 	}	
@@ -42,7 +40,7 @@
 /*small screen*/
 @media screen and (max-width: 375px) {
 	.lead__subtitle {
-		width: 375px;
+	
 		font-size: 16px;
 		line-height: 23px;
 	}
@@ -51,7 +49,7 @@
 /*smaller screen*/
 @media screen and (max-width: 320px) {
 	.lead__subtitle {
-		width: 288px;
+	
 		font-size: 16px;
 		line-height: 23px;
 	}
