--- a/blocks/lead/lead.css
+++ b/blocks/lead/lead.css
@@ -4,36 +4,38 @@
 @import url(./__image/lead__image.css);
 @import url(./__caption/lead__caption.css);
 .lead {
-	padding: 0 228px 81px;
+	padding-bottom: 81px;
 	margin: auto;
-	width: 985px;
+	width: 984px;
 	display: flex;
-	justify-content: center;
+  justify-content: center;
+  align-self: center;
 	flex-direction: column;
 }
+
 
 /*Use these checkpoints: 320, 375, 768, 1024, 1280*/
 
 /*large screen*/
 @media screen and (max-width: 1280px) {
 	.lead {
-		width: 985px;
-		padding: 0 148px 81px;
+		
+		padding-bottom: 81px;
 	}
 }	
 
 /*big screen*/
 @media screen and (max-width: 1024px) {
 	.lead {
-		width: 928px;
-		padding: 0 48px 76px;
+		width: 90%;
+		padding-bottom: 76px;
 	}
 }
 
 /*medium screen*/
 @media screen and (max-width: 768px) {
 	.lead {
-		width: 768px;
+		width: 100%;
 		padding-bottom: 80px;
 	}	
 }
@@ -41,7 +43,7 @@
 /*small screen*/
 @media screen and (max-width: 375px) {
 	.lead {
-		width: 375px;
+    
 		padding-bottom: 64px;
 	}
 }	
@@ -49,7 +51,7 @@
 /*smaller screen*/
 @media screen and (max-width: 320px) {
 	.lead {
-		width: 320px;
+    
 		padding-bottom: 64px;
 	}
 }
