--- a/blocks/nav/__link/nav__link.css
+++ b/blocks/nav/__link/nav__link.css
@@ -7,6 +7,10 @@
 	text-decoration: none;
 }
 
+.nav__link:hover {
+  opacity: 50%;
+  transition: opacity .5s ease;
+}
 /*Use these checkpoints: 320, 375, 768, 1024, 1280*/
 
 /*large screen*/
