--- a/blocks/place/__image/place__image.css
+++ b/blocks/place/__image/place__image.css
@@ -1,46 +1,40 @@
 .place__image {
-	margin-top: 43px;
-	width: 460px;
-	height: 460px;
+  width: 100%;
+  margin: 0 0 24px 0;
 }
 
 /*Use these checkpoints: 320, 375, 768, 1024, 1280*/
 /*large screen*/
-@media screen and (max-width: 1280px) {
-	.place__image {
-		width: 460px;
-		height: 460px;
-	}
-}	
+@media (min-width: 1280px) {
+  .place__image {
+      width: 460px;
+  }
+}
 
 /*big screen*/
-@media screen and (max-width: 1024px) {
-	.place__image {
-		width: 440px;
-		height: 440px;
-	}
-}	
+@media (min-width: 1024px) {
+  .place__image {
+      width: 460px;
+  }
+}
 
 /*medium screen*/
-@media screen and (max-width: 768px) {
-	.place__image {
-		width: 340px;
-		height: 340px;
-	}	
+@media (min-width: 768px) {
+  .place__image {
+      width: 340px;
+  }
 }
 
 /*small screen*/
-@media screen and (max-width: 375px) {
-	.place__image {
-		width: 375px;
-		height: 375px;
-	}
-}	
+@media (min-width: 375px) {
+  .place__image {
+      width: 100%;
+  }
+}
 
 /*smaller screen*/
-@media screen and (max-width: 320px) {
-	.place__image {
-		width: 320px;
-		height: 320px;
-	}
-}	
+@media (min-width: 320px) {
+  .place__image {
+      width: 100%;
+  }
+}
