--- a/blocks/place/__title/place__title.css
+++ b/blocks/place/__title/place__title.css
@@ -1,30 +1,30 @@
 .place__title {
-  font-family: "Inter-Black", Arial, sans-serif;
-  font-size: 72px;
-  line-height: 35px;
+  font-style: normal;
+  font-weight: 900;
   color: #FFFFFF;
-  margin: 64px 16px 0;
-  }
-  /*medium screen*/
-  @media (min-width: 768px) {
-    .place__title {
-      font-size: 42px;
-      line-height: 46px;
-      width: 340px;
-      margin: 80px 0 0 0;
-    }
-  }
-  /*big screen*/
-  @media (min-width: 1024px) {
-    .place__title {
+  display: flex;
+  flex-direction: column;
+  align-self: flex-end;
+  font-size: 32px;
+  line-height: 35px;
+  margin: 0 16px 32px 16px;
+  padding: 0;
+}
+
+/*Use these checkpoints: 320, 375, 768, 1024, 1280*/
+/*big screen*/
+@media (min-width: 1024px) {
+  .place__title {
       font-size: 72px;
       line-height: 65px;
-      width: 440px;
-    }
   }
-  /*large screen*/
-  @media (min-width: 1280px) {
-    .place__title {
-      width: 460px;
-    }
+}
+
+/*medium screen*/
+@media (min-width: 768px) {
+  .place__title {
+      font-size: 42px;
+      line-height: 46px;
+      margin: 0;
   }
+}
