--- a/blocks/places/places.css
+++ b/blocks/places/places.css
@@ -1,49 +1,7 @@
 /*places styles*/
+@import url(./__list/places__list.css);
+
 .places {
-	display: flex;
-	flex-direction: column;
-	flex-wrap: wrap;
-	width: 986px;
-	margin: auto;
-}
-
-/*Use these checkpoints: 320, 375, 768, 1024, 1280*/
-
-/*large screen*/
-@media screen and (max-width: 1280px) {
-	.places {
-		width: 986px;
-	}
-}	
-
-/*big screen*/
-@media screen and (max-width: 1024px) {
-	.places {
-		width: 928px;
-		padding-top: 102px;
-	}
-}	
-
-/*medium screen*/
-@media screen and (max-width: 768px) {
-	.places {
-		width: 720px;
-		padding-top: 102px;
-	}	
-}
-
-/*small screen*/
-@media screen and (max-width: 375px) {
-	.places {
-		width: 375px;
-		padding-top: 64px;
-	}
-}	
-
-/*smaller screen*/
-@media screen and (max-width: 320px) {
-	.places {
-		width: 320px;
-		padding-top: 64px;
-	}
-}	
+  margin: 0;
+  padding: 0;
+}  
