--- a/blocks/video/__image/video__image.css
+++ b/blocks/video/__image/video__image.css
@@ -1,49 +1,21 @@
 .video__image {
-	width: 583px;
-	height: 323px;
-	background-color: #000000;
-	opacity: 0.5;
-	border-radius: 5px;
+  width: 100%;
+  min-height: 192px;
+  margin: 0;
+  padding: 0;
+  border-radius: 5px;
+  opacity: 50%;
 }
 
 .video__image:hover {
 	transition: .5s ease;
 	opacity: 90%;
 }
+
 /*Use these checkpoints: 320, 375, 768, 1024, 1280*/
-/*large screen*/
-@media screen and (max-width: 1280px) {
-	.video__image {
-		width: 583px;
-	}
-}	
-
-/*big screen*/
-@media screen and (max-width: 1024px) {
-	.video__image {
-		width: 456px;
-	}
-}	
-
-/*medium screen*/
-@media screen and (max-width: 768px) {
-	.video__image {
-		width: 343px;
-	}	
-}
-
 /*small screen*/
 @media screen and (max-width: 375px) {
-	.video__image {
-		width: 288px;
-		justify-content: center;
-	}
-}	
-
-/*smaller screen*/
-@media screen and (max-width: 320px) {
-	.video__image {
-		width: 320px;
-		justify-content: center;
-	}
+  .video__image {
+    min-height: 200px;
+  }
 }	
