--- a/blocks/video/__title/video__title.css
+++ b/blocks/video/__title/video__title.css
@@ -1,56 +1,18 @@
-.video__content-title {
-	width: 800px;
-	margin: 0;
-  align-self: center;
-  font-family: "Inter-Black", sans-serif;
-	font-size: 72px;
-	line-height: 78px;
-	text-align: center;
-	color: #FFFFFF;
-}
-
-/*Use these checkpoints: 320, 375, 768, 1024, 1280*/
-/*large screen*/
-@media screen and (max-width: 1280px) {
-	.video__content-title {
-		width: 800px;
-		font-size: 72px;
-		line-height: 78px;
-	}
-}	
-
-/*big screen*/
-@media screen and (max-width: 1024px) {
-	.video__content-title {
-		width: 800px;
-		font-size: 72px;
-		line-height: 78px;
-	}
-}	
-
-/*medium screen*/
-@media screen and (max-width: 768px) {
-	.video__content-title {
-		width: 720px;
-		font-size: 42px;
-		line-height: 107.64%;
-	}	
+.video__title {
+  display: flex;
+  justify-content: center;
+  margin: auto;
+  text-align: center;
+  font-size: 72px;
+  line-height: 39px;
+  color: #FFFFFF;
 }
 
 /*small screen*/
 @media screen and (max-width: 375px) {
-	.video__content-title {
-		width: 343px;
+	.video__title {
+    width: auto;
 		font-size: 32px;
 		line-height: 35px;
-	}
-}	
-
-/*smaller screen*/
-@media screen and (max-width: 320px) {
-	.video__content-title {
-		width: 288px;
-		font-size: 32px;
-		line-height: 35px;
-	}
-}	
+	}	
+}
