--- a/pages/index.css
+++ b/pages/index.css
@@ -1,4 +1,4 @@
-/*Use these checkpoints: 320, 375, 768, 1024, 1280*/
+/*Use these checkpoints when needed: 320, 375, 768, 1024, 1280*/
 @import url(../vendor/fonts/fonts.css);
 @import url(../vendor/normalize.css);
 @import url(../blocks/page/page.css);
